plugins {
	id 'fabric-loom' version '1.6-SNAPSHOT'
	id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

archivesBaseName = project.archives_base_name
group = project.maven_group
version = "${project.mod_version}+${project.minecraft_version}"

repositories {
	mavenLocal()
	mavenCentral()
	maven { url "https://server.bbkr.space/artifactory/libs-release" }
	maven { url "https://maven.terraformersmc.com" }
	maven { url "https://cursemaven.com" }
	maven { url "https://jitpack.io" }
	maven { url "https://maven.siphalor.de" }
	maven { url "https://maven.shedaniel.me/" }
	maven { url "https://maven.architectury.dev/" }
	maven { url "https://maven.saps.dev/minecraft/" }
	maven { url "https://storage.googleapis.com/devan-maven/" }
	maven { url "https://maven.blamejared.com" }
	maven { url "https://ladysnake.jfrog.io/artifactory/mods" }
	maven { url "https://ueaj.dev/maven" } // aarp
	maven {
		name = "CottonMC"
		url = "https://server.bbkr.space/artifactory/libs-release"
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	compileOnly "com.google.code.findbugs:jsr305:3.0.2"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"
	modApi "dev.architectury:architectury-fabric:${project.architectury_version}"

	modImplementation include("io.github.cottonmc:LibGui:${project.libgui_version}")
	modImplementation include("net.devtech:arrp:${project.aarp_version}")

	modCompileOnly "dev.emi:emi-fabric:${emi_version}:api"

	switch (recipe_viewer.toLowerCase(Locale.ROOT)) {
		case "rei": modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"; break
		case "emi": modLocalRuntime "dev.emi:emi-fabric:${project.emi_version}"; break
		case "disabled": break
		default: println("Unknown recipe viewer specified: $project.recipe_viewer. Must be EMI, REI or disabled.")
	}

}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

// ensure that the encoding is set to UTF-8, no matter what the system default is
// this fixes some edge cases with special characters not displaying correctly
// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 21
}

java {
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}